force-app/main/default/objects/TimeStamp__c/TimeStamp__c.object-meta.xml
<CustomObject>
    <label>打刻</label>
    <nameField>
        <displayFormat>打刻No{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>打刻No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>