force-app/main/default/objects/TimeStamp__c/fields/AttendanceTimeSelection__c.field-meta.xml
<CustomField>
    <fullName>AttendanceTimeSelection__c</fullName>
    <label>出勤時間(選択)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeList30</valueSetName>
    </valueSet>
</CustomField>