force-app/main/default/objects/TimeStamp__c/fields/CalculationTimeSelection__c.field-meta.xml
<CustomField>
    <fullName>CalculationTimeSelection__c</fullName>
    <label>[システム]選択時間</label>
    <type>DateTime</type>
</CustomField>