force-app/main/default/objects/TimeStamp__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>コメント</label>
    <type>TextArea</type>
</CustomField>