force-app/main/default/objects/TimeStamp__c/fields/DailyReportId__c.field-meta.xml
<CustomField>
    <fullName>DailyReportId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連日報</label>
    <referenceTo>DailyReport__c</referenceTo>
    <relationshipLabel>打刻</relationshipLabel>
    <relationshipName>TimeStamps</relationshipName>
    <type>Lookup</type>
</CustomField>