force-app/main/default/objects/TimeStamp__c/fields/DisplayTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>DisplayTimeStamp__c</fullName>
    <formula>MID( TEXT( CreatedDate + 0.375 ),0, 10 )
+
&quot;　&quot;
+
MID( TEXT( CreatedDate + 0.375 ), 12, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[表示用]タイムスタンプ</label>
    <type>Text</type>
</CustomField>