force-app/main/default/objects/TimeStamp__c/fields/IcCard__c.field-meta.xml
<CustomField>
    <fullName>IcCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IC打刻</label>
    <type>Checkbox</type>
</CustomField>