force-app/main/default/objects/TimeStamp__c/fields/LeavingTimeSelection__c.field-meta.xml
<CustomField>
    <fullName>LeavingTimeSelection__c</fullName>
    <label>退勤時間(選択)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeList30Next</valueSetName>
    </valueSet>
</CustomField>