force-app/main/default/objects/TimeStamp__c/fields/TimeInputType__c.field-meta.xml
<CustomField>
    <fullName>TimeInputType__c</fullName>
    <label>[システムテスト用]時間入力種別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>