force-app/main/default/objects/TimeStamp__c/fields/TimeStampType__c.field-meta.xml
<CustomField>
    <fullName>TimeStampType__c</fullName>
    <label>打刻種類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出社打刻</fullName>
            </value>
            <value>
                <fullName>退社打刻</fullName>
            </value>
            <value>
                <fullName>休憩開始</fullName>
            </value>
            <value>
                <fullName>休憩終了</fullName>
            </value>
            <value>
                <fullName>外出</fullName>
            </value>
            <value>
                <fullName>戻り</fullName>
            </value>
            <value>
                <fullName>移動開始</fullName>
            </value>
            <value>
                <fullName>移動終了</fullName>
            </value>
            <value>
                <fullName>作業開始</fullName>
            </value>
            <value>
                <fullName>作業終了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>